kubernetes/main/apps/database/dragonfly/operator/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dragonfly-operator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dragonfly-operator
  ingress:
    - {}
  egress:
    # allow access to dragonfly cluster pods
    - toEndpoints:
        - matchExpressions:
            - key: dragonflydb.io/cluster
              operator: Exists
            - key: io.kubernetes.pod.namespace
              operator: Exists
      toPorts:
        - ports:
            - port: "9999"
              protocol: TCP
